<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trihandayani.tri_1202154321_studycase4.LoadImage">

    <TextView
        android:id="@+id/titlebar_load_image"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:background="@color/colorPrimary"
        android:text="@string/titlebar_load_image"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/editText_url_input"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titlebar_load_image"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/input_url"
        android:inputType="textUri"
        android:textAlignment="center"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_load_image"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/editText_url_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@color/colorButton"
        android:text="@string/btn_tampilkan_gambar"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <ImageView
        android:id="@+id/image_result"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/btn_load_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/desc_image_result"
        android:src="@mipmap/ic_launcher"
        android:background="@android:color/holo_red_light"/>
</RelativeLayout>
