<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trihandayani.tri_1202154321_studycase4.Main">


    <TextView
        android:id="@+id/titlebar_main"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:text="@string/titlebar_main"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_listMhsw"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/titlebar_main"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@color/colorButton"
        android:text="@string/btn_list_mahasiswa"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:onClick="toListMahasiswa"/>

    <Button
        android:id="@+id/btn_imgLoader"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_listMhsw"
        android:layout_marginTop="44dp"
        android:background="@color/colorButton"
        android:onClick="toImgSearch"
        android:text="@string/btn_pencarian_gambar"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
</RelativeLayout>
